--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>DoctorCare</title>
   </head>
-  <body onscroll="onScroll()">
+  <body>
     <nav id="navigation">
       <div class="wrapper">
         <a class="logo" href="#">
@@ -68,7 +68,7 @@
             <li><a onclick='closeMenu()'href="#services">Serviços</a></li>
               <li><a href="#">Sobre</a></li>
               <li><a href="#">Depoimento</a></li>
-              <button class="button">Agende sua consulta</button>
+              <a class="button" onclick="closeMenu()" href="#contact">Agende sua consulta</a>
           </ul>
          
 
